# Boring_Stuff

./: Boring_Stuff.code-workspace  README.md  pyproject.toml  pytest.ini
01/: hello.py  hello_world.py  test.py  test_debut.py
02/: fausse_capacite.py  spam_ham.py
03/: feuille_pierre_ciseaux.py
03/workbook/: xmasTreePrint_2.py
04/: collatz.py  collatz_jy.py  notrandomdice.py  spike.py  zigzag.py
04/workbook/: arithmetic_functions.py  tickTockPrint.py  transaction_tracker.py
05/: boxPrint.py  erreur_assertion.py  factorialLog.py  tirage_au_sort.py
05/workshop/: buggyLeapYear.py  buggygradeaverage.py
06/: allMyCats1.py  allMyCats2.py  code_virgule.py  code_virgule_corrige.py  magic8Ball2.py  matrixscreensaver.py  myPets.py  passingReference.py  serie_lancers_pieces.py  serie_lancers_pieces_corrige.py
06/workbook/: coordinateDirections.py  pangramDetector.py
07/: birthdays.py  characterCount.py  chessboard.py  fantasy_game.py  guestpicnic.py  loot_conversion.py  valid_chess_board.py
07/workbook/: avgTemp.py  rookCapture.py  weatherDataGen.py
08/: alternatingText.py  bulletPointAdder.py  pigLat.py  tablePrinter.py
08/workbook/: diagStripe.py  mockingSpongebob.py  wordMatchGame.py
09/: isPhoneNumber.py  phoneAndEmail.py  test_phone_number.py  test_phone_with_humre.py
10/: mad_libs.py  mad_libs_output.txt  randomQuizGenerator.py
11/: backup_to_zip.py  renomme_os_walk.py
12/: cliprec.py  fishtank.py  snowstorm.py
livre_boring_stuff/02/: dishonestcapacity.py  littleKid.py  oppositeday.py
livre_boring_stuff/03/: exitExample.py  fiveTimes.py  (+5 more)
(+19 files in other folders)
